updated settings URL #960

--- a/pages/sample/structure-settings.html
+++ b/pages/sample/structure-settings.html
@@ -2,7 +2,7 @@
 title: Settings bar
 landing: Structure
 layout: page.njk
-permalink: "structure/settings-bar.html"
+permalink: "structure/settings.html"
 ---
 
 
@@ -13,7 +13,7 @@ permalink: "structure/settings-bar.html"
    <ul class="list-navigation">
     <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
     <li><a href="/structure/utility-header.html">Utility header</a></li>
-    <li><a href="/structure/settings-bar.html" class="active">Settings</a></li>
+    <li><a href="/structure/settings.html" class="active">Settings</a></li>
     <li><a href="/structure/site-header.html">Site header</a></li>
     <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
     <li><a href="/structure/search.html">Search</a></li>
@@ -92,7 +92,7 @@ permalink: "structure/settings-bar.html"
      <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
       <div class="card-body">
        <h3 class="h4 m-t-0">HTML</h3>
-       <pre><code>{% include "../../src/_includes/settings-bar.njk" %}</code>
+       <pre><code>{% include "../../src/_includes/settings.njk" %}</code>
        </pre>
       </div>
      </div>
@@ -112,7 +112,7 @@ permalink: "structure/settings-bar.html"
        <h3 class="h4 m-t-0">Include path</h3>
        <p class="m-b">Add Settings bar <code>njk</code> include code right after Utility header component:
        </p>
-       <pre><code>&#123;% include "src/_includes/settings-bar.njk" %&#125;</code></pre>
+       <pre><code>&#123;% include "src/_includes/settings.njk" %&#125;</code></pre>
 
        <p class="m-t"><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the
         directory of
