--- a/pages/sample/navigation-full-width-utility.html
+++ b/pages/sample/navigation-full-width-utility.html
@@ -53,7 +53,7 @@ permalink: "structure/navigation-full-width-utility.html"
   <pre><span class="text-accent-p2">&lt;header</span> <span class="text-info">class=</span><span class="text-accent7">"global-header fixed"</span><span class="text-accent-p2">&gt;</span>
  <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"skip-to-content"</span><span class="text-accent-p2">&gt;&lt;a </span><span class="text-info">href=</span><span class="text-accent7">"#main-content"</span><span class="text-accent-p2">&gt;</span>Skip to Main Content<span class="text-accent-p2">&lt;/a&gt;&lt;/div&gt;</span>
    <span class="text-success">&#10100;% include "/src/_includes/utility-header.njk" %&#10101;</span>
-   <span class="text-success">&#10100;% include"/src/_includes/settings-bar.njk" %&#10101;</span>
+   <span class="text-success">&#10100;% include"/src/_includes/settings.njk" %&#10101;</span>
   <span class="text-accent-p2">&lt;div</span> <span class="text-info">class=</span><span class="text-accent7">"section-default"</span><span class="text-accent-p2">&gt;</span>
    <span class="text-success">&#10100;% include "/src/_includes/branding.njk" %&#10101;</span>
   <span class="text-accent-p2">&lt;/div&gt;</span>
