--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -13,7 +13,7 @@ permalink: "structure/search.html"
    <ul class="list-navigation">
     <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
     <li><a href="/structure/utility-header.html">Utility header</a></li>
-    <li><a href="/structure/settings-bar.html">Settings</a></li>
+    <li><a href="/structure/settings.html">Settings</a></li>
     <li><a href="/structure/site-header.html">Site header</a></li>
     <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
     <li><a href="/structure/search.html" class="active">Search</a></li>
