--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -50,7 +50,7 @@ permalink: "sitemap.html"
       <a href="/structure/utility-header.html">Utility header</a>
      </li>
      <li class="m-t-sm">
-      <a href="/structure/settings-bar.html">Settings</a>
+      <a href="/structure/settings.html">Settings</a>
      </li>
      <li class="m-t-sm">
       <a href="/structure/site-header.html">Site header</a>
