Components / Side navigation - text edits #979

--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -7,7 +7,7 @@ permalink: "/components/side-navigation.html"
 
 
 <h1 class="mt-lg-0 m-b-0">Side navigation</h1>
-<p class="subtitle">Other names: page index</p>
+<p class="subtitle">Other names: Left navigation, side menu</p>
 
 
 <nav aria-labelledby="page-navigation-label" class="page-navigation">
@@ -312,7 +312,7 @@ permalink: "/components/side-navigation.html"
 
 
 <h2 id="Scroll-bar">Scroll bar</h2>
-<p>This built-in feature will only activate when side navigation is longer than the current viewport area.</p>
+<p>This built-in feature only activates when side navigation is longer than the current viewport area.</p>
 
 
 
@@ -328,7 +328,7 @@ permalink: "/components/side-navigation.html"
  <li>Top level navigation isn’t enough to support your site hierarchy</li>
 </ul>
 
-<p>Use a <span class="bold">single level</span> when navigation is simple and direct.</p>
+<p>Use <span class="bold">single level</span> when navigation is simple and direct.</p>
 <p>Use <span class="bold">multi-level</span> when there are a lot of pages and/or hierarchical.</p>
 
 
@@ -421,7 +421,7 @@ permalink: "/components/side-navigation.html"
      <li><a href="javascript:;">Invitations</a></li>
      <li><a href="javascript:;">Decor</a></li>
      <li><a href="javascript:;">Food and drinks</a></li>
-     <li><a href="javascript:;">Surprise?</a></li>
+     <li><a href="javascript:;">Surprise</a></li>
      <li><a href="javascript:;">Activities</a></li>
      <li><a href="javascript:;">Gifts</a></li>
     </ul>
