Components / Tabs - link fix #982

--- a/pages/sample/tabs.html
+++ b/pages/sample/tabs.html
@@ -90,7 +90,7 @@ permalink: "components/tabs.html"
 <ul>
  <li>Split the content across multiple pages</li>
  <li>Keep the content on a single page, separated by headings</li>
- <li>Use side navigation to let users navigate quickly to specific
+ <li>Use <a href="/components/side-navigation.html">side navigation</a> to let users navigate quickly to specific
   sections of content</li>
 </ul>
 
