CSS Style Shortcuts - update link address #983

--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -128,7 +128,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
    <li><code>p-y-lg</code> is setting the top and bottom padding to a large height (3 rem)</li>
   </ul>
   <p>For more shortcuts, review <a
-    href="https://as-cdt-pub-migr-betaws-ww-p-001-stage.azurewebsites.net/get-started/css-classes-shortcuts/spacing.html#Using-the-spacing-class">Utility
+    href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility
     CSS classes</a>.</p>
 
     <h2>Spacing class shortcuts</h2>
