Fixed a11y and content issues on footer's page #962

--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -232,7 +232,7 @@ permalink: "/components/side-navigation.html"
   <div id="pane-example4" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example4">
    <div class="card-header" id="heading-example4">
     <h4 class="my-0 w-100">
-     <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
+     <a data-bs-toggle="collapse" href="#collapse-example4" data-parent="#tab-content" aria-expanded="true"
       aria-controls="collapse-example4" title="Example tab header">
       Example
      </a>
