--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -11,7 +11,7 @@ permalink: "structure/footer.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
+    <li><a href="/structure.html" id="navigation-list" class="landing">Structure</a></li>
     <li><a href="/structure/utility-header.html">Utility header</a></li>
     <li><a href="/structure/settings.html">Settings</a></li>
     <li><a href="/structure/site-header.html">Site header</a></li>
@@ -32,7 +32,7 @@ permalink: "structure/footer.html"
   <p>The footer contains a set of links that go on all the pages of the website.</p>
   <p>The footer always includes:</p>
   <ul>
-   <li>The CA<span>.</span>gov logo on the left that links to the CA<span>.</span>gov site</li>
+   <li>The CA<span>.</span>gov logo on the left that links to the CA<span>.</span>gov site.</li>
    <li>A set of standard links:<ul>
      <li>Conditions of use</li>
      <li>Privacy policy</li>
@@ -41,14 +41,14 @@ permalink: "structure/footer.html"
     </ul>
    </li>
 
-   <li>The copyright notice</li>
+   <li>The copyright notice.</li>
   </ul>
 
 
   <p>The footer can also include:</p>
   <ul>
-   <li>An optional logo on the left that links back to the homepage for the website</li>
-   <li>Customizable links</li>
+   <li>An optional logo on the left that links back to the homepage for the website.</li>
+   <li>Customizable links.</li>
    <li>Social media icons that link to official social media accounts. These could be for a department or a campaign.
     The available social media icons include:
     <ul>
@@ -83,16 +83,13 @@ permalink: "structure/footer.html"
     <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
      <div class="card-header" id="heading-example2">
       <h4 class="my-0 w-100">
-       <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
+       <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
         aria-controls="collapse-example2" title="Example tab header">
         Example
        </a>
       </h4>
      </div>
      <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-
-
-
 
       <div class="card-body">
        <h3 class="h4 m-t-0">Desktop</h3>
@@ -128,7 +125,7 @@ permalink: "structure/footer.html"
     </div>
 
     <div id="pane-include2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-include2">
-     <div class="card-header" id="heading-include1">
+     <div class="card-header" id="heading-include2">
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" data-parent="#tab-include2"
         aria-expanded="false" aria-controls="collapse-include2" title="Nunjucks Include tab header">
