--- a/pages/structure.html
+++ b/pages/structure.html
@@ -14,8 +14,8 @@ permalink: "structure.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="active landing">Structural elements <span
-       class="sr-only">landing page</span></a></li>
+    <li><a href="/structure.html" id="navigation-list" class="active landing">Structure <span class="sr-only">landing
+       page</span></a></li>
     <li><a href="/structure/utility-header.html">Utility header</a></li>
     <li><a href="/structure/settings.html">Settings</a></li>
     <li><a href="/structure/site-header.html">Site header</a></li>
@@ -60,7 +60,7 @@ permalink: "structure.html"
     <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
      <div class="card-header" id="heading-example2">
       <h4 class="my-0 w-100">
-       <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
+       <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
         aria-controls="collapse-example2" title="Example tab header">
         Example
        </a>
