--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -13,7 +13,7 @@ permalink: "structure/site-navigation.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
+    <li><a href="/structure.html" id="navigation-list" class="landing">Structure</a></li>
     <li><a href="/structure/utility-header.html">Utility header</a></li>
     <li><a href="/structure/settings.html">Settings</a></li>
     <li><a href="/structure/site-header.html">Site header</a></li>
@@ -65,24 +65,27 @@ permalink: "structure/site-navigation.html"
   <div class="tab-group responsive">
    <ul id="tabs1" class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
-     <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+     <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Single level menu</span> Example</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+     <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab"><span class="sr-only">Single
+       level menu</span> Source code</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab">Implementation
+     <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Single level menu</span> Implementation
       notes</a>
     </li>
    </ul>
 
 
-   <div class="tab-content" role="presentation">
+   <div class="tab-content" id="tab-content1">
     <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
      <div class="card-header" id="heading-example1">
       <h4 class="my-0 w-100">
-       <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
-        aria-controls="collapse-example1" title="Example tab header">
+       <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content1" aria-expanded="true"
+        aria-controls="collapse-example1" title="Single level menu example tab header">
         Example
        </a>
       </h4>
@@ -97,8 +100,8 @@ permalink: "structure/site-navigation.html"
     <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
      <div class="card-header" id="heading-html1">
       <h4 class="my-0 w-100">
-       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
-        aria-expanded="false" aria-controls="collapse-html1" title="HTML Source code tab header">
+       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content1"
+        aria-expanded="false" aria-controls="collapse-html1" title="Single level menu HTML Source code tab header">
         HTML Source code
        </a>
       </h4>
@@ -116,7 +119,8 @@ permalink: "structure/site-navigation.html"
      <div class="card-header" id="heading-include1">
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include1" data-parent="#tab-include1"
-        aria-expanded="false" aria-controls="collapse-include1" title="Implementation notes tab header">
+        aria-expanded="false" aria-controls="collapse-include1"
+        title="Single level menu Implementation notes tab header">
         Implementation notes</a>
       </h4>
      </div>
@@ -144,24 +148,27 @@ permalink: "structure/site-navigation.html"
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
-     <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+     <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Dropdown menu </span>Example</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+     <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Dropdown menu </span>Source code</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Implementation
+     <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Dropdown menu </span>Implementation
       notes</a>
     </li>
    </ul>
 
 
-   <div class="tab-content">
+   <div class="tab-content" id="tab-content2">
     <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
      <div class="card-header" id="heading-example2">
       <h4 class="my-0 w-100">
-       <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
-        aria-controls="collapse-example2" title="Example tab header">
+       <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content2" aria-expanded="true"
+        aria-controls="collapse-example2" title="Dropdown menu Example tab header">
         Example
        </a>
       </h4>
@@ -176,8 +183,8 @@ permalink: "structure/site-navigation.html"
     <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
      <div class="card-header" id="heading-html2">
       <h4 class="my-0 w-100">
-       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
-        aria-expanded="false" aria-controls="collapse-html2" title="HTML Source code tab header">
+       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content2"
+        aria-expanded="false" aria-controls="collapse-html2" title="Dropdown menu HTML Source code tab header">
         HTML Source code
        </a>
       </h4>
@@ -194,7 +201,7 @@ permalink: "structure/site-navigation.html"
      <div class="card-header" id="heading-include2">
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" data-parent="#tab-include2"
-        aria-expanded="false" aria-controls="collapse-include2" title="Implementation notes tab header">
+        aria-expanded="false" aria-controls="collapse-include2" title="Dropdown menu Implementation notes tab header">
         Implementation notes</a>
       </h4>
      </div>
@@ -221,24 +228,27 @@ permalink: "structure/site-navigation.html"
   <div class="tab-group responsive">
    <ul id="tabs3" class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
-     <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+     <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Megamenu </span>Example</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+     <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Megamenu </span>Source code</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-include3" href="#pane-include3" class="nav-link" data-bs-toggle="tab" role="tab">Implementation
+     <a id="tab-include3" href="#pane-include3" class="nav-link" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Megamenu </span>Implementation
       notes</a>
     </li>
    </ul>
 
 
-   <div class="tab-content">
+   <div class="tab-content" id="tab-content3">
     <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
      <div class="card-header" id="heading-example3">
       <h4 class="my-0 w-100">
-       <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
-        aria-controls="collapse-example3" title="Example tab header">
+       <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content3" aria-expanded="true"
+        aria-controls="collapse-example3" title="Megamenu Example tab header">
         Example
        </a>
       </h4>
@@ -253,8 +263,8 @@ permalink: "structure/site-navigation.html"
     <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
      <div class="card-header" id="heading-html3">
       <h4 class="my-0 w-100">
-       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
-        aria-expanded="false" aria-controls="collapse-html3" title="HTML Source code tab header">
+       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content3"
+        aria-expanded="false" aria-controls="collapse-html3" title="Megamenu HTML Source code tab header">
         HTML Source code
        </a>
       </h4>
@@ -271,7 +281,7 @@ permalink: "structure/site-navigation.html"
      <div class="card-header" id="heading-include3">
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include3" data-parent="#tab-include3"
-        aria-expanded="false" aria-controls="collapse-include3" title="Implementation notes tab header">
+        aria-expanded="false" aria-controls="collapse-include3" title="Megamenu Implementation notes tab header">
         Implementation notes</a>
       </h4>
      </div>
@@ -348,24 +358,27 @@ permalink: "structure/site-navigation.html"
   <div class="tab-group responsive">
    <ul id="tabs4" class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
-     <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+     <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Icon menu </span>Example</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+     <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab"><span class="sr-only">Icon
+       menu </span>Source code</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-include4" href="#pane-include4" class="nav-link" data-bs-toggle="tab" role="tab">Implementation
+     <a id="tab-include4" href="#pane-include4" class="nav-link" data-bs-toggle="tab" role="tab"><span
+       class="sr-only">Icon menu </span>Implementation
       notes</a>
     </li>
    </ul>
 
 
-   <div class="tab-content">
+   <div class="tab-content" id="tab-content4">
     <div id="pane-example4" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example4">
      <div class="card-header" id="heading-example4">
       <h4 class="my-0 w-100">
-       <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
-        aria-controls="collapse-example4" title="Example tab header">
+       <a data-bs-toggle="collapse" href="#collapse-example4" data-parent="#tab-content4" aria-expanded="true"
+        aria-controls="collapse-example4" title="Icon menu Example tab header">
         Example
        </a>
       </h4>
@@ -380,8 +393,8 @@ permalink: "structure/site-navigation.html"
     <div id="pane-html4" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html4">
      <div class="card-header" id="heading-html4">
       <h4 class="my-0 w-100">
-       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" data-parent="#tab-content"
-        aria-expanded="false" aria-controls="collapse-html4" title="HTML Source code tab header">
+       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" data-parent="#tab-content4"
+        aria-expanded="false" aria-controls="collapse-html4" title="Icon menu HTML Source code tab header">
         HTML Source code
        </a>
       </h4>
@@ -399,7 +412,7 @@ permalink: "structure/site-navigation.html"
      <div class="card-header" id="heading-include4">
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include4" data-parent="#tab-include4"
-        aria-expanded="false" aria-controls="collapse-include4" title="Implementation notes tab header">
+        aria-expanded="false" aria-controls="collapse-include4" title="Icon menu Implementation notes tab header">
         Implementation notes</a>
       </h4>
      </div>
