--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -11,7 +11,7 @@ permalink: "structure/utility-header.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
+    <li><a href="/structure.html" id="navigation-list" class="landing">Structure</a></li>
     <li><a href="/structure/utility-header.html" class="active">Utility header</a></li>
     <li><a href="/structure/settings.html">Settings</a></li>
     <li><a href="/structure/site-header.html">Site header</a></li>
@@ -57,11 +57,11 @@ permalink: "structure/utility-header.html"
    </ul>
 
 
-   <div class="tab-content">
+   <div class="tab-content" id="tab-content2">
     <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
      <div class="card-header" id="heading-example2">
       <h4 class="my-0 w-100">
-       <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
+       <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content2" aria-expanded="true"
         aria-controls="collapse-example2" title="Example tab header">
         Example
        </a>
@@ -85,7 +85,7 @@ permalink: "structure/utility-header.html"
     <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
      <div class="card-header" id="heading-html2">
       <h4 class="my-0 w-100">
-       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
+       <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content2"
         aria-expanded="false" aria-controls="collapse-html2" title="HTML Source code tab header">
         HTML Source code
        </a>
@@ -101,7 +101,7 @@ permalink: "structure/utility-header.html"
     </div>
 
     <div id="pane-include2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-include2">
-     <div class="card-header" id="heading-include1">
+     <div class="card-header" id="heading-include2">
       <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" data-parent="#tab-include2"
         aria-expanded="false" aria-controls="collapse-include2" title="Nunjucks Include tab header">
