--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -10,7 +10,7 @@ permalink: "visual-design/color.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/visual-design/color.html" class="active">Colors</a>
+    <li><a href="/visual-design/color.html" class="active landing">Colors</a>
      <ul>
       <li><a href="/visual-design/color/?delta">Delta</a></li>
       <li><a href="/visual-design/color/?eureka">Eureka</a></li>
@@ -72,7 +72,7 @@ permalink: "visual-design/color.html"
  }
 
  .palette-card {
-  border: 1px solid #aaa;
+  border: 1px solid #D4D4D7;
   padding: 22px;
  }
 
