updated link examples and removed scroll to top effect #978

--- a/pages/404.html
+++ b/pages/404.html
@@ -8,7 +8,7 @@ permalink: "404.html"
  <div class="col-md-10 mx-auto p-b-lg">
   <h1 class="m-t-0">We're sorry, that link didn't work.</h1>
 
-  <p>To find what you need, you can:</p>
+  <p class="lea">To find what you need, you can:</p>
 
   <ul>
    <li>Browse our <a href="/">homepage</a></li>
