--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -89,7 +89,7 @@ permalink: "/components/side-navigation.html"
      <p class="m-b">Add class <code>landing</code> to your landing page link to indicate the landing page. Use
       <code>active</code> class on your link to indicate the current page if the page is currently open.
      </p>
-     <pre><code><li><a href="#" class="landing active">Landing page</a></li></code></pre>
+     <pre><code><li><a href="javascript:;" class="landing active">Landing page</a></li></code></pre>
     </div>
    </div>
   </div>
@@ -197,7 +197,7 @@ permalink: "/components/side-navigation.html"
       sublanding page link
       to add back arrow icon. Don't use <code>back</code> class if the page is current.
      </p>
-     <pre><code><li><a href="#" class="landing back">Page 4 section landing</a></li></code></pre>
+     <pre><code><li><a href="javascript:;" class="landing back">Page 4 section landing</a></li></code></pre>
 
     </div>
    </div>
@@ -286,7 +286,7 @@ permalink: "/components/side-navigation.html"
    <div class="accordion-body">
     <ul class="side-subnav">
      <li>
-      <a href="#">Subpage 1</a>
+      <a href="javascript:;">Subpage 1</a>
      </li>
     </ul>
    </div>
