--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -57,7 +57,7 @@ permalink: "components/alert.html"
        <img src="/images/alert-info.svg" alt="alert info icon">
        <span class="alert-text"><span class="text-bold">New!</span> A new version of the State Web Template has
         launched. <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
-        <a href="#">Upgrade now</a></span>
+        <a href="javascript:;">Upgrade now</a></span>
        <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
          class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
       </div>
@@ -71,7 +71,7 @@ permalink: "components/alert.html"
        <span class="alert-text"><span class="text-bold">Warning:</span> Our website may be impacted during upgrade.
         <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
 
-        <a href="#">Learn more <span class="sr-only">about the impact</span></a></span>
+        <a href="javascript:;">Learn more <span class="sr-only">about the impact</span></a></span>
        <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
          class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
       </div>
@@ -86,7 +86,7 @@ permalink: "components/alert.html"
        <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
        <span class="alert-text"><span class="text-bold">Alert:</span> Our systems are currently down. <span
          class="ca-gov-icon-pipe" aria-hidden="true"></span>
-        <a href="#">Learn more <span class="sr-only">about the incident</span></a></span>
+        <a href="javascript:;">Learn more <span class="sr-only">about the incident</span></a></span>
        <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
          class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
       </div>
@@ -99,7 +99,7 @@ permalink: "components/alert.html"
        <img src="/images/alert-success.svg" alt="alert success icon">
        <span class="alert-text"><span class="text-bold">Fixed.</span> Our systems are back up again. <span
          class="ca-gov-icon-pipe" aria-hidden="true"></span>
-        <a href="#">Learn more <span class="sr-only">about the resolution</span></a></span>
+        <a href="javascript:;">Learn more <span class="sr-only">about the resolution</span></a></span>
        <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
          class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
       </div>
@@ -131,7 +131,7 @@ permalink: "components/alert.html"
    <img src="/images/alert-info.svg" alt="alert info icon">
    <span class="alert-text"><span class="text-bold">New!</span> A new version of the State Web Template has
     launched. <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
-    <a href="#">Upgrade now</a></span>
+    <a href="javascript:;">Upgrade now</a></span>
    <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
      class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
   </div>
@@ -146,7 +146,7 @@ permalink: "components/alert.html"
  <span class="alert-icon ca-gov-icon-warning-triangle text-warning" aria-hidden="true"></span>
  <span class="alert-text"><span class="text-bold">Warning:</span> Our website may be impacted during upgrade.
   <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
-  <a href="#">Learn more <span class="sr-only">about the impact</span></a></span>
+  <a href="javascript:;">Learn more <span class="sr-only">about the impact</span></a></span>
  <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
    class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
 </div>
@@ -162,7 +162,7 @@ permalink: "components/alert.html"
    <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
    <span class="alert-text"><span class="text-bold">Alert:</span> Our systems are currently down. <span
      class="ca-gov-icon-pipe" aria-hidden="true"></span>
-    <a href="#">Learn more <span class="sr-only">about the incident</span></a></span>
+    <a href="javascript:;">Learn more <span class="sr-only">about the incident</span></a></span>
    <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
      class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
   </div>
@@ -177,7 +177,7 @@ permalink: "components/alert.html"
    <img src="/images/alert-success.svg" alt="alert success icon">
    <span class="alert-text"><span class="text-bold">Fixed.</span> Our systems are back up again. <span
      class="ca-gov-icon-pipe" aria-hidden="true"></span>
-    <a href="#">Learn more <span class="sr-only">about the resolution</span></a></span>
+    <a href="javascript:;">Learn more <span class="sr-only">about the resolution</span></a></span>
    <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
      class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
   </div>
