--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -30,6 +30,8 @@ permalink: "contact-us-form.html"
       required
       aria-required="true"
       size="65"
+      maxlength="200"
+      minlength="3"
     />
     <div class="invalid-feedback d-block">This field is required</div>
     <br />
@@ -45,6 +47,8 @@ permalink: "contact-us-form.html"
       required
       aria-required="true"
       size="65"
+      maxlength="200"
+      minlength="5"
     />
     <div class="invalid-feedback d-block">A valid email is required</div>
     <br />
@@ -59,6 +63,8 @@ permalink: "contact-us-form.html"
       autocomplete="organization"
       aria-required="false"
       size="65"
+      maxlength="200"
+      minlength="1"
     />
     <br />
     <label class="form-control-label" for="InputRole">Main role</label>
@@ -72,6 +78,8 @@ permalink: "contact-us-form.html"
       aria-required="false"
       aria-autocomplete="both"
       size="65"
+      maxlength="200"
+      minlength="3"
     />
     <datalist id="roleSuggestions">
       <option>Analytics</option>
@@ -95,6 +103,8 @@ permalink: "contact-us-form.html"
       name="Comments"
       aria-required="true"
       required
+      maxlength="1000"
+      minlength="10"
     ></textarea>
     <div class="invalid-feedback d-block">This field is required</div>
     <br />
