--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -10,7 +10,7 @@ permalink: "visual-design/color.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/visual-design/color.html" class="active landing">Colors</a>
+    <li><a href="/visual-design/color.html" class="active landing" id="color-themes-list">Colors</a>
      <ul>
       <li><a href="/visual-design/color/?delta">Delta</a></li>
       <li><a href="/visual-design/color/?eureka">Eureka</a></li>
