Added missing banner icon #984

--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -18,6 +18,20 @@ permalink: "patterns.html"
 
 <div class="row">
  <div class="col-md-4 m-t-md">
+  <a href="/patterns/banner.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
+   title="banner examples">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-banner.jpg" alt="Banner illustration" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Banner</h3>
+    <p class="font-size-16 color-black">Highlights an action and the most important information on a page.
+    </p>
+   </div>
+  </a>
+ </div>
+ <div class="col-md-4 m-t-md">
   <a href="/patterns/card.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Card examples">
@@ -45,20 +59,7 @@ permalink: "patterns.html"
    </div>
   </a>
  </div>
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/link-grid.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="Link Grid examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-grid.jpg" alt="Link Grid illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Link grid</h3>
-    <p class="font-size-16 color-black">Shows a collection of links to frequently used pages.
-    </p>
-   </div>
-  </a>
- </div>
+
 </div>
 
 
@@ -164,6 +165,20 @@ permalink: "patterns.html"
 
 
 <div class="row">
+ <div class="col-md-4 m-t-md">
+  <a href="/patterns/link-grid.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
+   title="Link Grid examples">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-grid.jpg" alt="Link Grid illustration" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Link grid</h3>
+    <p class="font-size-16 color-black">Shows a collection of links to frequently used pages.
+    </p>
+   </div>
+  </a>
+ </div>
  <div class="col-md-4 m-t-md">
   <a href="/patterns/progress-tracker.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
