--- a/pages/sample/card.html
+++ b/pages/sample/card.html
@@ -75,10 +75,10 @@ permalink: "patterns/card.html"
 <h3>When and how to use it </h3>
 <p>Use cards to:</p>
 <ul>
- <li>Highlight an action you want people to take.</li>
- <li>Group related content.</li>
- <li>Add imagery to blocks of text.</li>
- <li>Showcase an important bit of information.</li>
+ <li>Highlight an action you want people to take</li>
+ <li>Group related content</li>
+ <li>Add imagery to blocks of text</li>
+ <li>Showcase an important bit of information</li>
 </ul>
 <p>All cards include container text. Cards can also include a(n):</p>
 <ul>
