Updated card grid pattern #986

--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -45,7 +45,7 @@ permalink: "patterns/card-grid.html"
     </a>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="p-a-md p-b-lg">
+    <div class="p-a-md">
 
      {% include "../../src/_includes/modules/card-grid-basic.html" %}
 
