--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -36,7 +36,7 @@ permalink: "download-and-setup.html"
 
   <div class="p-a-md p-b-lg bg-gray-75">
 
-   <h2 class="h3 mt-0">Common web template files</h2>
+   <h2 class="h3 mt-0">Common web template resources</h2>
 
    <div class="flex-container justify-content-between gap-3 font-size-14">
     <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
@@ -119,9 +119,9 @@ permalink: "download-and-setup.html"
      <p>You can clone it from our <a
        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">Template GitHub
        Repository</a>.</p>
-     <p>You can also download or access the different frameworks. Review <a href="#Commonlinks">Common
-       V6 State Web Template file
-       links</a>. This is
+     <p>You can also download or access the different frameworks. Review <a href="#Common-web-template-resources">Common
+       web template
+       resources</a>. This is
       also a good time to have your security office perform a scan of the files.</p>
     </span>
    </li>
@@ -195,9 +195,6 @@ permalink: "download-and-setup.html"
 
   <h2>Folder structure and files</h2>
 
-  <p>Discover what’s in the V6 State Template package. Review <a href="/download-and-setup.html">Download
-    and setup</a> for more details.</p>
-
   <div class="flex-container">
    <div class="brd-solid-1 brd-gray-light p-3">
     <ul class="folder-structure-list">
@@ -269,7 +266,7 @@ permalink: "download-and-setup.html"
   <h3>Step 2. Set up your pages</h3>
 
   <p>To start, you can use the sample State Template web pages. If your website doesn’t use NPM or Eleventy, you can
-   use these clear starter template codes:</p>
+   use these clean starter template codes:</p>
   <button type="button" class="btn btn-default d-block m-b-md brd-primary" style="color:#046B99;" data-bs-toggle="modal"
    data-bs-target="#template-blocks">Clean HTML template source code</button>
   <button type="button" class="btn btn-default d-block m-b-md brd-primary" style="color:#046B99;" data-bs-toggle="modal"
