Template Updates - content missing #957

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -24,6 +24,18 @@ permalink: "template-updates.html"
  </thead>
  <tbody>
   <tr>
+    <td class="text-bold font-size-16">6.0.9</td>
+    <td class="font-size-16">11-23-22</td>
+    <td>
+     <ul class="font-size-16">
+      <li>Updated alert banner</li>
+      <li>Added 8 new icons to the CAGov icons font</li>
+      <li>Added side navigation component</li>
+      <li>Added pagination to the icon search page</li>
+     </ul>
+    </td>
+   </tr>
+  <tr>
    <td class="text-bold font-size-16">6.0.8</td>
    <td class="font-size-16">7-30-22</td>
    <td>
