--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -143,6 +143,7 @@ permalink: "visual-design/icons.html"
   box-shadow: inset 0 0 0 1px #d4d4d7;
   /* Gray-200 */
   padding: 6px 14px;
+  font-weight: bold;
  }
 
  .pagenumbers a:hover {
@@ -177,7 +178,7 @@ permalink: "visual-design/icons.html"
   var listHtml = "";
   var numberOfResults = 0;
   var inputBox = document.querySelector("#iconSearchForm input");
-  var searchInput = inputBox ? inputBox.value.trim().toLowerCase() : "";
+  var searchInput = inputBox ? inputBox.value.trim().toLowerCase().replace(/[<>]/g,'') : "";
   const iconsPerPage = 60;
 
   const letterList = [...new Set(iconData.icons.map(x => x.properties.name.charAt(0)))];
@@ -215,7 +216,7 @@ permalink: "visual-design/icons.html"
             </div>
             <div class="icon-specs p-r  gray-900">
               <p style="text-transform:capitalize" class="bold m-t m-b-0 font-size-16">${icon.properties.name.replace('-', ' ')}</p>
-              <p class="font-size-12 m-0">ca-gov-icon-${icon.properties.name}</p>
+              <p class="font-size-13 m-0">ca-gov-icon-${icon.properties.name}</p>
             </div>
           </div>
           `;
@@ -395,6 +396,7 @@ permalink: "visual-design/icons.html"
     class="search-textfield rounded-5 icons-searchbox">
    <button type="reset" title="reset" class="border-0 color-white icon-reset"><span class="ca-gov-icon-close-mark"
      aria-hidden="true"></span><span class="sr-only">Reset</span></button>
+   <button type="submit" value="Submit" onclick="javascript:buildList(false,0);" class="sr-only"></button>
   </form>
 
   <div id="jumpToHeading">
