Using production form service

--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -33,7 +33,9 @@ permalink: "contact-us-form.html"
       maxlength="200"
       minlength="3"
     />
-    <div class="mt-2 invalid-feedback d-block font-weight-bold">Enter your name</div>
+    <div class="mt-2 invalid-feedback d-block font-weight-bold">
+      Enter your name
+    </div>
     <br />
     <label class="form-control-label" for="InputEmail"
       ><span class="required-label" aria-hidden="true">*</span> Email</label
@@ -50,10 +52,13 @@ permalink: "contact-us-form.html"
       maxlength="200"
       minlength="5"
     />
-    <div class="mt-2 invalid-feedback d-block font-weight-bold">Enter your email</div>
+    <div class="mt-2 invalid-feedback d-block font-weight-bold">
+      Enter your email
+    </div>
     <br />
     <label class="form-control-label" for="InputDepartment"
-      ><span class="required-label" aria-hidden="true">*</span> Department or agency</label
+      ><span class="required-label" aria-hidden="true">*</span> Department or
+      agency</label
     >
     <input
       type="text"
@@ -67,9 +72,13 @@ permalink: "contact-us-form.html"
       maxlength="200"
       minlength="1"
     />
-    <div class="mt-2 invalid-feedback d-block font-weight-bold">Enter your department or agency</div>
+    <div class="mt-2 invalid-feedback d-block font-weight-bold">
+      Enter your department or agency
+    </div>
     <br />
-    <label class="form-control-label" for="InputRole"><span class="required-label" aria-hidden="true">*</span> Main role</label>
+    <label class="form-control-label" for="InputRole"
+      ><span class="required-label" aria-hidden="true">*</span> Main role</label
+    >
     <input
       type="text"
       class="form-control"
@@ -84,7 +93,9 @@ permalink: "contact-us-form.html"
       maxlength="200"
       minlength="3"
     />
-    <div class="mt-2 invalid-feedback d-block font-weight-bold">Select a topic</div>
+    <div class="mt-2 invalid-feedback d-block font-weight-bold">
+      Select a topic
+    </div>
     <datalist id="roleSuggestions">
       <option>Analytics</option>
       <option>Content</option>
@@ -110,7 +121,9 @@ permalink: "contact-us-form.html"
       maxlength="1000"
       minlength="10"
     ></textarea>
-    <div class="mt-2 invalid-feedback d-block font-weight-bold">Provide information about why you're contacting us.</div>
+    <div class="mt-2 invalid-feedback d-block font-weight-bold">
+      Provide information about why you're contacting us.
+    </div>
     <br />
     <input type="submit" value="Submit" class="btn btn-primary" />
 
@@ -201,8 +214,7 @@ permalink: "contact-us-form.html"
 <a href="contact-us-thankyou.html" id="urlThankyou" class="hidden"></a>
 
 <script>
-  const serviceUrl =
-    "https://fa-cdt-pub-migr-betaws-w-p-001-stage.azurewebsites.net/api/air-table";
+  const serviceUrl = "https://api.template.webstandards.ca.gov/api/air-table";
 
   {
     //This code runs first
