updated typography page #967

--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -51,36 +51,39 @@ permalink: "visual-design/typography.html"
 
   <h2>Font code</h2>
 
-  <table id="fontcodetable" class="">
+  <table class="font-size-15 brd-solid-1 brd-gray-200">
    <thead>
     <tr>
-     <th>Name</th>
-     <th>Usage and demo</th>
-     <th>Code</th>
+     <th scope="col" class="p-a brd-bottom brd-right brd-gray-200">Name</th>
+     <th scope="col" class="p-a brd-bottom brd-right brd-gray-200">Usage and demo</th>
+     <th scope="col" class="p-a brd-bottom brd-gray-200">Code</th>
     </tr>
    </thead>
    <tbody>
     <tr>
-     <td>Font family</td>
-     <td>Use sitewide for all text.</td>
-     <td>font-family:'Public Sans', sans-serif;</td>
+     <td class="p-a align-top brd-bottom brd-right brd-gray-200">Font family</td>
+     <td class="p-a align-top brd-bottom brd-right brd-gray-200">Use sitewide for all text.</td>
+     <td class="p-a align-top brd-bottom brd-gray-200">font-family:'Public Sans', sans-serif;</td>
     </tr>
     <tr>
-     <td>Lead paragraph</td>
-     <td class="lead">Use to highlight the intro paragraph on a webpage.</td>
-     <td>Class: .lead<br>
-      Code: font-size: calc(1.4375rem + 0.1vw);</td>
+     <td class="p-a  align-top brd-bottom brd-right brd-gray-200">Lead paragraph</td>
+     <td class="lead p-a  align-top  brd-bottom brd-right brd-gray-200">Use to highlight the intro paragraph on a
+      webpage.</td>
+     <td class="p-a align-top brd-bottom brd-gray-200">Class: .lead<br>
+      <div class="m-t">Code: font-size: calc(1.4375rem + 0.1vw);</div>
+     </td>
     </tr>
     <tr>
-     <td>Regular paragraph</td>
-     <td>Use for all body text.</td>
-     <td>font-size: calc(1.125rem + 0.1vw);</td>
+     <td class="p-a align-top brd-bottom brd-right brd-gray-200">Regular paragraph</td>
+     <td class="p-a align-top font-size-16 brd-bottom brd-right brd-gray-200">Use for all body text.</td>
+     <td class="p-a align-top brd-bottom brd-gray-200">font-size: calc(1.125rem + 0.1vw);</td>
     </tr>
     <tr>
-     <td>Small-text paragraph</td>
-     <td class="small">Use for tooltips and footnotes.</td>
-     <td>Class: .small<br>
-      Code: font-size: calc(1rem + 0.1vw);</td>
+     <td class="p-a align-top brd-right brd-gray-200">Small-text paragraph</td>
+     <td class="p-a small align-top brd-right brd-gray-200">Use for tooltips and footnotes.</td>
+     <td class="p-a align-top">Class: .small<br>
+      <div class="m-t">Code: font-size: calc(1rem + 0.1vw);</div>
+     </td>
     </tr>
    </tbody>
   </table>
@@ -91,10 +94,10 @@ permalink: "visual-design/typography.html"
 
   <div class="row mt-4">
    <div class="col-md-4">
-    <div class="example-heading">
-     <div class="h1">Heading 1</div>
+    <div class="example-heading pos-rel align-bottom m-y height-60">
+     <div class="h1 pos-abs bottom-0 m-a-0">Heading 1</div>
     </div>
-    <div class="font-size-70x">
+    <div class="font-size-70x brd-left brd-gray-200 p-l">
      font-family: 'Public Sans'<br />
      font-weight: 700<br />
      font-size: calc(2.9375rem + 0.1vw)<br />
@@ -103,10 +106,10 @@ permalink: "visual-design/typography.html"
    </div>
 
    <div class="col-md-4">
-    <div class="example-heading">
-     <div class="h2">Heading 2</div>
+    <div class="example-heading pos-rel align-bottom m-y height-60">
+     <div class="h2 pos-abs bottom-0 m-a-0">Heading 2</div>
     </div>
-    <div class="font-size-70x">
+    <div class="font-size-70x brd-left brd-gray-200 p-l">
      font-family: 'Public Sans'<br />
      font-weight: 700<br />
      font-size: calc(2.3175rem + 0.1vw);<br />
@@ -115,10 +118,10 @@ permalink: "visual-design/typography.html"
    </div>
 
    <div class="col-md-4">
-    <div class="example-heading">
-     <div class="h3">Heading 3</div>
+    <div class="example-heading pos-rel align-bottom m-y height-60">
+     <div class="h3 pos-abs bottom-0 m-a-0">Heading 3</div>
     </div>
-    <div class="font-size-70x">
+    <div class="font-size-70x brd-left brd-gray-200 p-l">
      font-family: 'Public Sans'<br />
      font-weight: 700<br />
      font-size: calc(1.8125rem + 0.1vw)<br />
@@ -127,12 +130,12 @@ permalink: "visual-design/typography.html"
    </div>
   </div>
 
-  <div class="row">
+  <div class="row p-b-lg">
    <div class="col-md-4">
-    <div class="example-heading">
-     <div class="h4">Heading 4</div>
+    <div class="example-heading pos-rel align-bottom m-y height-60">
+     <div class="h4 pos-abs bottom-0 m-a-0">Heading 4</div>
     </div>
-    <div class="font-size-70x">
+    <div class="font-size-70x brd-left brd-gray-200 p-l">
      font-family: 'Public Sans'<br />
      font-weight: 700<br />
      font-size: calc(1.4375rem + 0.1vw)<br />
@@ -141,10 +144,10 @@ permalink: "visual-design/typography.html"
    </div>
 
    <div class="col-md-4">
-    <div class="example-heading">
-     <div class="h5">Heading 5</div>
+    <div class="example-heading pos-rel align-bottom m-y height-60">
+     <div class="h5 pos-abs bottom-0 m-a-0">Heading 5</div>
     </div>
-    <div class="font-size-70x">
+    <div class="font-size-70x brd-left brd-gray-200 p-l">
      font-family: 'Public Sans'<br />
      font-weight: 700<br />
      font-size: calc(1.125rem + 0.1vw);<br />
@@ -153,10 +156,10 @@ permalink: "visual-design/typography.html"
    </div>
 
    <div class="col-md-4">
-    <div class="example-heading">
-     <div class="h6">Heading 6</div>
+    <div class="example-heading pos-rel align-bottom m-y height-60">
+     <div class="h6 pos-abs bottom-0 m-a-0">Heading 6</div>
     </div>
-    <div class="font-size-70x">
+    <div class="font-size-70x brd-left brd-gray-200 p-l height-60">
      font-family: 'Public Sans'<br />
      font-weight: 700<br />
      font-size: calc(0.875rem + 0.1vw);<br />
@@ -167,34 +170,3 @@ permalink: "visual-design/typography.html"
 
  </div>
 </div>
-
-<style>
- .font-size-70x {
-  border-left: 2px solid #ccc;
-  padding-left: 1em;
- }
-
- .example-heading {
-  min-height: 4rem;
-  vertical-align: text-bottom;
-  position: relative;
-  margin: 1rem 0 1rem 0;
- }
-
- .example-heading div {
-  margin: 0rem 0 0rem 0;
-  position: absolute;
-  bottom: 0;
- }
-
- #fontcodetable {
-  border-collapse: collapse;
- }
-
- #fontcodetable td,
- #fontcodetable th {
-  border: 1px solid #aaa;
-  padding: .7rem .5rem;
-  vertical-align: top;
- }
-</style>
