removed inline style

--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -35,7 +35,7 @@ permalink: "visual-design/typography.html"
       href="https://designsystem.digital.gov/">United States Web Design System</a>. This strong, neutral typeface
      is used for text and headings.
     </p>
-    <p><a class="btn btn-default brd-primary color-primary" style="color: #046B99"
+    <p><a class="btn btn-default brd-primary color-primary"
       href="https://fonts.google.com/specimen/Public+Sans#standard-styles">Public Sans
       in Google Fonts</a></p>
    </div>
