Template Updates - content missing #957

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,7 @@ permalink: "template-updates.html"
       <li>Added 8 new icons to the CAGov icons font</li>
       <li>Added side navigation component</li>
       <li>Added pagination to the icon search page</li>
+      <li>Added automatic "on this page" navigation component</li>
      </ul>
     </td>
    </tr>
