updated alert page #970

--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -12,13 +12,14 @@ permalink: "components/alert.html"
 
 <p>The alert is for important, sometimes time-sensitive
  information. Reserve alerts for information the audience must read before anything else.</p>
-<p>The alert is a band that extends across the width of the <a href="/structure/structure-utility-header.html">utility
+<p>The alert is a band that extends across the width of the <a href="/structure/utility-header.html">utility
   header</a>. </p>
 <p>It includes:</p>
 <ul>
  <li>An optional icon, selected from a list of font icon options</li>
  <li>A text field, which includes the ability to link to other pages</li>
  <li>An “X” close icon that allows people to dismiss the alert</li>
+ <li>Your theme's standout color as the background color</li>
 </ul>
 
 <h2>Sample</h2>
