Patterns / Link grid - text edits #987

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -40,7 +40,7 @@ permalink: "visual-design/color.html"
   </p>
 
   <h2 id="AddAColorTheme">Add a color theme</h2>
-  <p>There are two ways to customize your main theme colors.</p>
+  <p>There are two ways to customize your main theme colors:</p>
   <ul>
    <li>Change the primary and secondary theme color variables in the SASS file (/src/scss/colortheme/oceanside.scss).
    </li>
