Updated sitemap and removed inline css #989

--- a/pages/components.html
+++ b/pages/components.html
@@ -8,13 +8,7 @@ permalink: "components.html"
 
 <h1 class="mt-lg-0">Components</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#All-Components">All Components</a></li>
-  <li><a href="#CSS-style-shortcuts">CSS style shortcuts</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 
 <p class="lead">Components are the reusable building blocks of the State Template. </p>
