--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -7,10 +7,11 @@ permalink: "download-and-setup.html"
 
 <div class="row">
  <div class="col-md-3">
-  <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
+  <nav aria-labelledby="side-navigation-label" class="side-navigation sticky-6 overflow-auto">
+   <span class="sr-only" id="side-navigation-label">Side navigation</span>
    <ul class="list-navigation">
     <li>
-     <a href="/get-started.html" class="landing" id="page-navigation-label">Get started</a>
+     <a href="/get-started.html" class="landing">Get started</a>
     </li>
 
     <li>
@@ -38,8 +39,8 @@ permalink: "download-and-setup.html"
 
    <h2 class="h3 mt-0">Common web template resources</h2>
 
-   <div class="flex-container justify-content-between gap-3 font-size-14">
-    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
+   <div class="d-flex flex-row flex-wrap flex-lg-nowrap justify-content-between gap-3 font-size-14">
+    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5 w-100 flex-fill">
      <span class="bold"><a
        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website#available-state-web-template-frameworks">Template
        frameworks</a> core code without sample content</span>
@@ -57,7 +58,7 @@ permalink: "download-and-setup.html"
       </li>
      </ul>
     </div>
-    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
+    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5  w-100 flex-fill">
      <span class="bold">State web template website with all sample content</span>
      <ul class="mt-2 p-l-md">
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">Github
@@ -66,7 +67,7 @@ permalink: "download-and-setup.html"
         template releases for download</a></li>
      </ul>
     </div>
-    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
+    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5  w-100 flex-fill">
      <span class="bold">CDN (content delivery network)</span>
      <ul class="mt-2 p-l-md">
       <li><a href="/cdn.html">V6 CSS/JS core CDN links</a>
@@ -284,23 +285,24 @@ permalink: "download-and-setup.html"
 
   <h3>Step 4. Use NPM to run the state web template locally</h3>
 
-  <div class="grid-container">
-   <div>
+
+  <div class="d-grid grid-columns-auto brd-top brd-left brd-gray-200">
+   <div class="p-a brd-bottom brd-gray-200 m-a-0">
     1. Use this command to install all the necessary npm packages to your local website directory.
    </div>
-   <pre>npm install
+   <pre class="p-a m-a-0">npm install
             </pre>
-   <div>
+   <div class="p-a brd-bottom brd-gray-200 m-a-0">
     2. Use this command to build and generate your website's pages, css and js files.
    </div>
-   <pre>npm run build
+   <pre class="p-a m-a-0">npm run build
             </pre>
-   <div>
+   <div class="p-a brd-bottom brd-gray-200 m-a-0">
     3. Use this command to run the website in your <code>http://localhost:8080/</code>
     and watch for any updates you are making
     to webpages or scss and js files.
    </div>
-   <pre>npm run start
+   <pre class="p-a m-a-0">npm run start
             </pre>
   </div>
 
@@ -324,11 +326,17 @@ permalink: "download-and-setup.html"
   <pre>&lt;link rel="stylesheet" href="/css/cagov.core.css">
 &lt;link rel="stylesheet" href="/css/colortheme-oceanside.css"></pre>
 
-  <p>If your website doesn't use a site generator, you can copy and paste the stylesheet links into your
-   <code>&lt;head></code> before all other stylesheets to load our CSS. Note: you can
-   replace <code>colortheme-oceanside.css</code> with a color
-   theme file of your choice.
-  </p>
+  <h5>Custom CSS</h5>
+  <p>You can add global custom css into <code>/src/scss/custom/custom.scss</code> file. Those styles will be compiled
+   into <code>cagov.core.css</code> file. There is also an option to apply custom css to a specific page. To do that you
+   need to add your custom css file into <code>/src/scss/custom/</code> folder and make reference to it in the page's
+   front matter under <code>customcss</code> key. Here is an example: </p>
+  <pre>---
+title: California State Web Template
+layout: landing.njk
+customcss: /css/custom/homepage.css
+---</pre>
+
 
   <h4>JavaScript</h4>
 
@@ -369,6 +377,10 @@ permalink: "download-and-setup.html"
    <tr>
     <td>Standard page</td>
     <td class="bg-gray-75"><code>page.njk</code></td>
+   </tr>
+   <tr>
+    <td>Narrower standard page version</td>
+    <td class="bg-gray-75"><code>one-col.njk</code></td>
    </tr>
    <tr>
     <td>Full width page with main navigation with icons</td>
@@ -561,39 +573,3 @@ Page content
  </div>
 </div>
 <!-- / End Modal -->
-
-<style>
- .flex-container {
-  display: flex;
-  flex-direction: row;
- }
-
- @media (max-width: 800px) {
-  .flex-container {
-   flex-wrap: wrap;
-  }
-
-  .flex-container>div {
-   width: 100%;
-  }
- }
-
- .flex-container>.bg-white {
-  flex: 1 1 33%;
- }
-
- .grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
-  border-top: 1px solid #aaa;
-  border-left: 1px solid #aaa;
- }
-
- .grid-container>div,
- .grid-container>pre {
-  padding: 1rem;
-  border-bottom: 1px solid #aaa;
-  border-right: 1px solid #aaa;
-  margin: 0;
- }
-</style>
