--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -16,6 +16,7 @@ permalink: "sitemap.html"
     <a class="d-block m-y" href="/template-updates.html">Template updates</a>
     <h2 class="h3">Get started</h2>
     <a class="d-block m-y" href="/get-started.html">Get started</a>
+
     <ul>
      <li class="m-t-sm">
       <a href="/whats-new.html">What's new</a>
@@ -41,7 +42,7 @@ permalink: "sitemap.html"
       </ul>
      </li>
     </ul>
-
+    <a class="d-block m-y" href="/cdn.html">CDN</a>
 
     <h2 class="h3">Structure</h2>
     <a class="d-block m-y" href="/structure.html">Structure</a>
@@ -129,7 +130,7 @@ permalink: "sitemap.html"
       <a href="/components/breadcrumb.html">Breadcrumb</a>
      </li>
      <li class="m-t-sm">
-      <a href="/components/buttons.html">Button</a>
+      <a href="/components/button.html">Button</a>
      </li>
      <li class="m-t-sm">
       <a href="/components/countdown-timer.html">Countdown timer</a>
@@ -150,10 +151,16 @@ permalink: "sitemap.html"
       <a href="/components/number-counter.html">Number counter</a>
      </li>
      <li class="m-t-sm">
+      <a href="/components/page-navigation.html">Page navigation</a>
+     </li>
+     <li class="m-t-sm">
       <a href="/components/parallax.html">Parallax</a>
      </li>
      <li class="m-t-sm">
       <a href="/components/progress-bar.html">Progress bar</a>
+     </li>
+     <li class="m-t-sm">
+      <a href="/components/side-navigation.html">Side navigation</a>
      </li>
      <li class="m-t-sm">
       <a href="/components/social-media-icons.html">Social media icons</a>
