--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -9,10 +9,11 @@ permalink: "whats-new.html"
 
 <div class="row">
  <div class="col-md-3">
-  <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
+  <nav aria-labelledby="side-navigation-label" class="side-navigation sticky-6 overflow-auto">
+   <span class="sr-only" id="side-navigation-label">Side navigation</span>
    <ul class="list-navigation">
     <li>
-     <a href="/get-started.html" class="landing" id="page-navigation-label">Get started</a>
+     <a href="/get-started.html" class="landing">Get started</a>
     </li>
 
     <li>
